# dingofs

./: .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG_CN.md  CLAUDE.md  CMakeLists.txt  HISTORY.md  INSTALL.md  Jenkinsfile  Makefile  README.md  WORKSPACE  pyproject.toml
dingofs/: CMakeLists.txt
dingofs/conf/: client.conf  metaserver.conf  tools.conf  topology.json
dingofs/devops/: ansible.cfg  client.yml  tools.yml
dingofs/monitor/: README.md  dingo-monitor.sh  docker-compose.yml
dingofs/src/: CMakeLists.txt
dingofs/test/: CMakeLists.txt
examples/c/: CMakeLists.txt  common.h  hello.c  link.c  mkdir.c  mknod.c  options_demo.c  read.c  rename.c  stat.c  statfs.c  symlink.c  write.c  xattr.c
examples/cpp/: CMakeLists.txt  common.h  link.cc  mkdir.cc  options_demo.cc  read.cc  rename.cc  stat.cc  statfs.cc  symlink.cc  write.cc  xattr.cc
sdk/c/: CMakeLists.txt  dingofsConfig.cmake.in  libdingofs.cc  libdingofs.h
sdk/python/: CMakeLists.txt  DEVELOP.md  README.md  librados_version.map
sdk/shim/: CMakeLists.txt  binding_client.cc  binding_client.h
src/cache/: CMakeLists.txt  README.md  dingo_cache.cc  dingo_cache.cpp  dingo_cache.h  help.cpp  help.h  main.cc  main.cpp  server.cpp  server.h  usage.cpp  version.cpp  version.h
src/client/: CMakeLists.txt  access_log.cpp  access_log.h  client_operator.cpp  client_operator.h  const.h  dingo_fuse_op.cpp  dingo_fuse_op.h  dingo_fuse_op_dummy.cpp  dingo_fuse_op_mdsv2.cpp  fuse_client.cpp  fuse_client.h  fuse_s3_client.cpp  fuse_s3_client.h  in_time_warmup_manager.cpp  in_time_warmup_manager.h  inode_cache_manager.cpp  inode_cache_manager.h  inode_wrapper.cpp  inode_wrapper.h  main.cc  main.cpp  metacache.h  metacache_struct.h  vfs.h  vfs_meta.h  vfs_wrapper.cpp  vfs_wrapper.h  xattr_manager.cpp  xattr_manager.h
src/common/: CMakeLists.txt  README.md  callback.h  config_mapper.h  const.h  context.h  define.h  directory.h  dynamic_config.cpp  dynamic_config.h  dynamic_vlog.cpp  flag.cc  flag.h  helper.h  io_buffer.cc  io_buffer.cpp  io_buffer.h  logging.cc  logging.cpp  logging.h  meta.h  metric_utils.h  process.cpp  process.h  rpc_stream.cpp  rpc_stream.h  s3util.h  slice.cpp  slice.h  static_mem.cc  static_mem.h  status.cc  status.cpp  status.h  step_timer.cpp  step_timer.h  string_slice.cc  string_slice.h  types.h  utils.cpp  (+3 more)
src/mds/: .clang-format  CMakeLists.txt  chunkid_allocator.cpp  fs_info_wrapper.cpp  fs_info_wrapper.h  fs_manager.cpp  fs_manager.h  fs_storage.cpp  fs_storage.h  main.cc  main.cpp  mds.cpp  mds.h  mds_service.cpp  mds_service.h  server.cc  server.h
src/mdsv2/: CMakeLists.txt  main.cc  server.cc  server.h
src/metaserver/: CMakeLists.txt  dentry_manager.h  dentry_storage.cpp  dentry_storage.h  heartbeat.cpp  heartbeat.h  inode_manager.cpp  inode_manager.h  inode_storage.cpp  inode_storage.h  main.cpp  metaserver.cpp  metaserver.h  metaserver_service.cpp  metaserver_service.h  metastore.cpp  metastore.h  metastore_fstream.cpp  metastore_fstream.h  partition.cpp  partition.h  partition_clean_manager.cpp  partition_clean_manager.h  partition_cleaner.cpp  partition_cleaner.h  partition_cleaner_common.h  recycle_cleaner.cpp  recycle_cleaner.h  recycle_manager.cpp  recycle_manager.h  register.cpp  register.h  s3compact.cpp  s3compact.h  s3compact_inode.cpp  s3compact_inode.h  s3compact_manager.cpp  s3compact_manager.h  s3compact_worker.h  s3infocache.cpp  (+6 more)
src/tools/: CMakeLists.txt  README.md  dingofs_tool.cpp  dingofs_tool.h  dingofs_tool_abstract_creator.h  dingofs_tool_define.cpp  dingofs_tool_define.h  dingofs_tool_factory.cpp  dingofs_tool_factory.h  dingofs_tool_main.cpp  dingofs_tool_metric.h
src/utils/: CMakeLists.txt  bitmap.cpp  channel_pool.cpp  channel_pool.h  configuration.cpp  configuration.h  daemonize.h  define.h  dingo_compiler_specific.h  dingo_define.h  dingo_version.cpp  dingo_version.h  doubly_map.h  encode.h  fast_align.h  fs_util.h  gflags_helper.h  hash.h  interruptible_sleeper.h  leaky_bucket.cpp  leaky_bucket.h  location_operator.cpp  location_operator.h  logclean_manager.cc  logclean_manager.h  lru_cache.h  message_queue.h  numa_manager.cc  numa_manager.h  scoped_cleanup.h  shards.h  string.h  stringstatus.h  task_tracker.cpp  task_tracker.h  thread_util.cpp  thread_util.h  throttle.h  time.h  timeutility.h  (+3 more)
test/: CMakeLists.txt
test/aws/: mock_s3_adapter.h
test/base/: CMakeLists.txt  test_cache.cpp  test_ketama_con_hash.cpp  test_time.cpp
test/cache/: CMakeLists.txt
test/client/: CMakeLists.txt  client_memcache_test.cpp  client_operator_test.cpp  client_s3_adaptor_Integration.cpp  client_s3_adaptor_test.cpp  file_cache_manager_test.cpp  fs_cache_manager_test.cpp  mock_client_s3_adaptor.h  mock_client_s3_cache_manager.h  mock_dentry_cache_mamager.h  mock_dir_parent_watcher.h  mock_inode_cache_manager.h  mock_kvclient.h  mock_mds_client.h  mock_mds_service.h  mock_metaserver_client.h  mock_metaserver_service.h  mock_timer.h  test_dentry_cache_manager.cpp  test_fuse_s3_client.cpp  test_inodeWrapper.cpp  test_inode_cache_manager.cpp
test/common/: CMakeLists.txt  rw_lock_test.cpp  test_add_ull_string.cpp
test/fs/: local_filesystem_unittest.cpp  mock_local_filesystem.h  mock_posix_wrapper.h  posix_wrapper_test.cpp
test/integration/: CMakeLists.txt
test/mds/: CMakeLists.txt  chunkid_allocator_test.cpp  fake_metaserver.h  fs_info_wrapper_test.cpp  fs_manager_test.cpp  fs_manager_test2.cpp  fs_storage_test.cpp  main.cc  mds_service_test.cpp  mds_test.cpp  metaserver_balance_poc.cpp  persist_kvstorage_test.cpp
test/mdsv2/: main.cc
test/metaserver/: CMakeLists.txt  dentry_manager_test.cpp  dentry_storage_test.cpp  heartbeat_task_executor_test.cpp  inode_manager_test.cpp  inode_storage_test.cpp  metaserver_s3_adaptor_test.cpp  metaserver_s3_adaptor_test.h  metaserver_s3_test.cpp  metaserver_service_test2.cpp  metaserver_test.cpp  metastore_test.cpp  mock_heartbeat_service.h  mock_metaserver_s3.h  mock_metaserver_s3_adaptor.h  mock_topology_service.h  partition_clean_test.cpp  partition_test.cpp  recycle_cleaner_test.cpp  recycle_manager_test.cpp  (+3 more)
(+4129 files in other folders)
